T-7896 theme: More fixes for white space under tabs issue
Reviewed-on: http://review.dev.totaralms.com/626
Tested-by: Simon Coggins <simon.coggins@totaralms.com>

--- a/theme/totara/styles_totara.css
+++ b/theme/totara/styles_totara.css
@@ -2600,10 +2600,6 @@ table.allmyteam td a {
 .learning-plan-pending-approval-table .lastcol{
     width:250px;
 }
-#local-plan-approve .tabtree .tabrow0{
-    padding-bottom:10px;
-}
-
 
 /*****************************************************************************/
 /** Tables **/
